@@ -2,139 +2,112 @@ package tech.vcinf.teste.ws.gerador;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
 import org.springframework.stereotype.Component;
 
 import javax.net.ssl.*;
 import java.io.*;
 import java.net.URL;
-import java.net.URLConnection;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.*;
 import java.security.KeyStore;
 import java.security.cert.CertificateFactory;
 import java.security.cert.X509Certificate;
-import java.util.Arrays;
 import java.util.List;
 
 @Component
 public class CacertUtil {
+    private static final Logger log = LoggerFactory.getLogger(CacertUtil.class);
+    private static final String PASS = "changeit";
 
-    private static final Logger logger = LoggerFactory.getLogger(CacertUtil.class);
-    private static final String SENHA = "changeit";
-    private static final List<String> ICP_BRASIL_URLS = Arrays.asList(
+    // Links oficiais das Raízes da ICP-Brasil
+    private static final List<String> ICP_URLS = List.of(
             "http://acraiz.icpbrasil.gov.br/credenciadas/RAIZ/ICP-Brasilv10.crt",
             "http://acraiz.icpbrasil.gov.br/credenciadas/RAIZ/ICP-Brasilv5.crt",
             "http://acraiz.icpbrasil.gov.br/credenciadas/RAIZ/ICP-Brasilv2.crt");
 
+    // Hosts da SEFAZ para captura dinâmica de certificados
+    private static final List<String> HOSTS = List.of(
+            "nfe.sefaz.mt.gov.br",
+            "nfce.sefaz.mt.gov.br",
+            "mdfe.svrs.rs.gov.br");
+
     public static void createTrustStore() {
-        logger.info("Iniciando Gerador de TrustStore Integrado (Hosts + ICP-Brasil)...");
-
-        List<String> hosts = List.of("nfe.sefaz.mt.gov.br", "nfce.sefaz.mt.gov.br", "mdfe.svrs.rs.gov.br");
-        Path pathOrigem = Paths.get(System.getProperty("java.home"), "lib", "security", "cacerts");
-        Path pathDestino = Paths.get("cacerts");
+        log.info("Gerando TrustStore customizado...");
+        Path cacertsDefault = Paths.get(System.getProperty("java.home"), "lib", "security", "cacerts");
+        Path novoCacert = Paths.get("cacerts");
 
         try {
-            KeyStore ks = loadKeyStore(pathOrigem);
-
-            // 1. Baixar e incluir Raízes ICP-Brasil
-            for (String url : ICP_BRASIL_URLS) {
-                importarRaizIcp(url, ks);
+            // 1. Carrega o KeyStore base da JDK
+            KeyStore ks = KeyStore.getInstance(KeyStore.getDefaultType());
+            try (InputStream is = Files.newInputStream(cacertsDefault)) {
+                ks.load(is, PASS.toCharArray());
             }
 
-            // 2. Capturar certificados dos Hosts (SEFAZ)
-            for (String host : hosts) {
-                importarCertificadosHost(host, ks);
+            // 2. Importa Raízes ICP-Brasil (Certificados Estáticos via HTTP)
+            CertificateFactory cf = CertificateFactory.getInstance("X.509");
+            for (String url : ICP_URLS) {
+                try (InputStream in = new URL(url).openStream()) {
+                    X509Certificate cert = (X509Certificate) cf.generateCertificate(in);
+                    ks.setCertificateEntry("icp-" + url.substring(url.length() - 7, url.length() - 4), cert);
+                } catch (Exception e) {
+                    log.warn("Falha ao baixar raiz: " + url);
+                }
             }
 
-            saveKeyStore(ks, pathDestino);
+            // 3. Importa Cadeias dos Hosts (Captura Dinâmica via Handshake)
+            for (String host : HOSTS) {
+                capturarCadeiaHost(host, ks);
+            }
 
-            logger.info("Processo concluído com sucesso. Arquivo: {}", pathDestino.toAbsolutePath());
+            // 4. Salva o arquivo final no diretório da aplicação
+            try (OutputStream os = Files.newOutputStream(novoCacert)) {
+                ks.store(os, PASS.toCharArray());
+            }
+            log.info("Sucesso! TrustStore criado em: " + novoCacert.toAbsolutePath());
 
         } catch (Exception e) {
-            logger.error("Falha no gerador: ", e);
+            log.error("Erro crítico na geração: " + e.getMessage());
         }
     }
 
-    private static void importarRaizIcp(String urlStr, KeyStore ks) {
+    private static void capturarCadeiaHost(String host, KeyStore ks) {
         try {
-            logger.info("Baixando Raiz ICP: {}...", urlStr);
-            URL url = new URL(urlStr);
-            URLConnection conn = url.openConnection();
-            conn.setConnectTimeout(5000);
-            conn.setReadTimeout(5000);
-
-            try (InputStream in = conn.getInputStream()) {
-                CertificateFactory cf = CertificateFactory.getInstance("X.509");
-                X509Certificate cert = (X509Certificate) cf.generateCertificate(in);
-                String alias = "icp-brasil-" + urlStr.substring(urlStr.lastIndexOf("v"), urlStr.lastIndexOf("."));
-                ks.setCertificateEntry(alias, cert);
-                logger.info("Raiz {} adicionada ao KeyStore.", alias);
-            }
-        } catch (Exception e) {
-            logger.warn("Não foi possível baixar a raiz {}: {}", urlStr, e.getMessage());
-        }
-    }
-
-    private static void importarCertificadosHost(String host, KeyStore ks) {
-        try {
-            logger.info("Conectando ao host SEFAZ: {}...", host);
-            SSLContext context = SSLContext.getInstance("TLSv1.2");
+            SSLContext ctx = SSLContext.getInstance("TLSv1.2");
             CapturingTrustManager ctm = new CapturingTrustManager();
-            context.init(null, new TrustManager[] { ctm }, null);
+            ctx.init(null, new TrustManager[] { ctm }, null);
 
-            SSLSocketFactory factory = context.getSocketFactory();
-            try (SSLSocket socket = (SSLSocket) factory.createSocket(host, 443)) {
-                socket.setSoTimeout(10000);
+            // Tenta o handshake apenas para disparar o CapturingTrustManager
+            try (SSLSocket socket = (SSLSocket) ctx.getSocketFactory().createSocket(host, 443)) {
+                socket.setSoTimeout(5000);
                 SSLParameters params = socket.getSSLParameters();
                 params.setServerNames(List.of(new SNIHostName(host)));
                 socket.setSSLParameters(params);
                 socket.startHandshake();
             } catch (IOException ignored) {
-            }
+            } // Frequentemente fecha após enviar certs
 
             if (ctm.chain != null) {
                 for (int i = 0; i < ctm.chain.length; i++) {
                     ks.setCertificateEntry(host + "-" + i, ctm.chain[i]);
                 }
-                logger.info("Cadeia do host {} importada.", host);
             }
         } catch (Exception e) {
-            logger.error("Erro no host {}: {}", host, e.getMessage());
+            log.warn("Erro ao capturar host " + host);
         }
     }
 
-    private static KeyStore loadKeyStore(Path path) throws Exception {
-        KeyStore ks = KeyStore.getInstance(KeyStore.getDefaultType());
-        try (InputStream in = Files.newInputStream(path)) {
-            ks.load(in, SENHA.toCharArray());
-        }
-        return ks;
-    }
-
-    private static void saveKeyStore(KeyStore ks, Path path) throws Exception {
-        try (OutputStream out = Files.newOutputStream(path)) {
-            ks.store(out, SENHA.toCharArray());
-        }
-    }
-
+    // Classe interna para interceptar os certificados durante o handshake
     private static class CapturingTrustManager implements X509TrustManager {
         private X509Certificate[] chain;
 
-        @Override
-        public void checkServerTrusted(X509Certificate[] chain, String authType) {
-            this.chain = chain;
+        public void checkServerTrusted(X509Certificate[] c, String a) {
+            this.chain = c;
         }
 
-        @Override
-        public void checkClientTrusted(X509Certificate[] chain, String authType) {
+        public void checkClientTrusted(X509Certificate[] c, String a) {
         }
 
-        @Override
         public X509Certificate[] getAcceptedIssuers() {
             return new X509Certificate[0];
         }
     }
-
 }
